# drone-notify

./: .drone.yml  .gitignore  Dockerfile  README.md  Readme.md  drone.cfg.example  main.py  notify.conf.example  notify.sh  notify.toml.example  pyproject.toml  requirements.txt
drone_notify/: __main__.py  config.py  digest.py  drone.py  http_signature.py  types.py
drone_notify/notify/: __init__.py  matrix.py  telegram.py  types.py
scripts/: mock_drone_request.py  start_test_server.sh
tests/: test_digest.py  test_http_signature.py  test_notify.py
