[project]
name = "drone-notify"
version = "1.4"
dependencies = [
  "aiohttp>=3.8",
  "http-message-signatures>=0.4.1",
]

[project.optional-dependencies]
lint = [
  "black",
  "isort",
  "mypy",
  "pylint",
  "pyupgrade",
]
test = [
  # https://github.com/pytest-dev/pytest-asyncio/issues/737
  "pytest<8",
  "pytest-aiohttp",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
fast = true
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.'messages control']
enable = "all"
disable = [
  "fixme",
  "suppressed-message",
  "too-few-public-methods",
  # Several vars in __main__.py need refactoring
  "used-before-assignment",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-q",
  "-ra",
  "-vv",
]
pythonpath = [
  "."
]
testpaths = [
  "tests",
]
