[project]
name = "drone-notify"
version = "1.5"
dependencies = [
  "aiohttp>=3.8",
  "aiosqlite",
  "asyncpg",
  "dacite",
  "html2text",
  "http-message-signatures>=0.4.1",
  "mautrix",
  "pydantic",
  "python-olm",
]

[project.optional-dependencies]
lint = [
  "black",
  "isort",
  "mypy",
  "pylint",
  "pyupgrade",
]
test = [
  "pytest",
  "pytest-aiohttp",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
fast = true
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.'messages control']
enable = "all"
disable = [
  "fixme",
  "invalid-name",
  "suppressed-message",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "use-implicit-booleaness-not-comparison-to-zero",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-q",
  "-ra",
  "-vv",
]
pythonpath = [
  "."
]
testpaths = [
  "tests",
]
